--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-csso": "^2.0.0",
+    "gulp-file-include": "^2.0.1",
     "gulp-filter": "^4.0.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-rev": "^7.0.0",
     "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^4.0.2",
