--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.3",
+    "browsersync-ssi": "0.2.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-csso": "^2.0.0",
     "gulp-file-include": "^2.0.1",
     "gulp-filter": "^4.0.0",
     "gulp-imagemin": "^5.0.3",
+    "gulp-minify": "0.0.5",
     "gulp-rev": "^7.0.0",
     "gulp-rev-replace": "^0.4.3",
+    "gulp-plumber": "^1.0.1",
     "gulp-sass": "^4.0.2",
+    "gulp-sequence": "^1.0.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^1.5.3",
     "gulp-useref": "^3.1.0"
   }
