--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "gulp-filter": "^4.0.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-minify": "0.0.5",
+    "gulp-plumber": "^1.0.1",
     "gulp-rev": "^7.0.0",
     "gulp-rev-replace": "^0.4.3",
-    "gulp-plumber": "^1.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-sequence": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^1.5.3",
-    "gulp-useref": "^3.1.0"
+    "gulp-useref": "^3.1.0",
+    "gulp.spritesmith": "^6.9.0"
   }
 }
